fix episode rating align

--- a/custom.css
+++ b/custom.css
@@ -198,7 +198,9 @@ html {
 .nowPlayingBarSecondaryText,
 .programSecondaryTitle,
 .secondaryText {
-    color: rgba(255, 255, 255, .5)
+    color: rgba(255,255,255,.5);
+    align-items: center;
+    justify-content: flex-start
 }
 
 .actionsheetDivider {
